15. Wrap blocks and stop from going outside yellow gameboard.

--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,8 @@
 .block {
     width: 20px;
     height: 20px;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .option-container {
